build/log/idf_py_stderr_output_62672
Command: make -j 14 all
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c: In function 'mqtt_event_handler':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c:28:29: warning: unused variable 'event' [-Wunused-variable]
   28 |     esp_mqtt_event_handle_t event = event_data;
      |                             ^~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c: In function 'mqtt_app_start':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c:55:19: error: 'esp_mqtt_client_config_t' has no member named 'cert_pem'
   55 |           mqtt_cfg.cert_pem = NULL;  // no cert
      |                   ^
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c:56:13: error: 'esp_mqtt_client_config_t' has no member named 'client_cert_pem'
   56 |     mqtt_cfg.client_cert_pem = NULL;
      |             ^
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/mqtt_app.c:57:13: error: 'esp_mqtt_client_config_t' has no member named 'client_key_pem'
   57 |     mqtt_cfg.client_key_pem = NULL;
      |             ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:115: esp-idf/main/CMakeFiles/__idf_main.dir/network/mqtt_app.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/per_intr.c:81:23: warning: 'disp_isr_handler' defined but not used [-Wunused-function]
   81 | static void IRAM_ATTR disp_isr_handler(void *arg)
      |                       ^~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'wifi_start_sta_mode':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:754:22: warning: unused variable 'sta_netif' [-Wunused-variable]
  754 |         esp_netif_t *sta_netif = esp_netif_create_default_wifi_sta();
      |                      ^~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'initialize_sntp':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:1050:9: warning: 'sntp_setoperatingmode' is deprecated: use esp_sntp_setoperatingmode() instead [-Wdeprecated-declarations]
 1050 |         sntp_setoperatingmode(SNTP_OPMODE_POLL);
      |         ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.h:76,
                 from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:602:
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:249:6: note: declared here
  249 | void sntp_setoperatingmode(u8_t operating_mode)
      |      ^~~~~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:1051:9: warning: 'sntp_setservername' is deprecated: use esp_sntp_setservername() instead [-Wdeprecated-declarations]
 1051 |         sntp_setservername(0, "pool.ntp.org");
      |         ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:263:6: note: declared here
  263 | void sntp_setservername(u8_t idx, const char *server)
      |      ^~~~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:1053:9: warning: 'sntp_init' is deprecated: use esp_sntp_init() instead [-Wdeprecated-declarations]
 1053 |         sntp_init();
      |         ^~~~~~~~~
/home/umesh_adwait/esp-idf/components/lwip/include/apps/esp_sntp.h:269:6: note: declared here
  269 | void sntp_init(void)
      |      ^~~~~~~~~
make[1]: *** [CMakeFiles/Makefile2:6398: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
